uploading progess. Includes working flask that pulls db sql file

--- a/Data_Exploration__Database_Creation/Income_perstate_and_obesity.ipynb
+++ b/Data_Exploration__Database_Creation/Income_perstate_and_obesity.ipynb
@@ -882,6 +882,132 @@
     "                  encoding=\"utf-8\", index=False, header=True)\n",
     "income_data_clean.to_json(\"../Resources/Income_data_and_obesity.json\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine, text, Column, Integer, String\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "import pandas as pd\n",
+    "import psycopg2\n",
+    "#Flask related dependencies\n",
+    "import os\n",
+    "from flask import Flask, render_template, request, url_for, redirect, jsonify\n",
+    "from flask_sqlalchemy import SQLAlchemy\n",
+    "\n",
+    "from sqlalchemy.sql import func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       0           1         2         3     4\n",
+      "0                 Alaska    731545.0    1457.0  0.001992  29.8\n",
+      "1                Alabama   4903185.0   21138.0  0.004311  35.6\n",
+      "2               Arkansas   3017804.0   13062.0  0.004328  34.5\n",
+      "3                Arizona   7278717.0   29852.0  0.004101  28.4\n",
+      "4             California  39512223.0  102356.0  0.002590  24.2\n",
+      "5               Colorado   5758736.0   14522.0  0.002522  20.2\n",
+      "6            Connecticut   3565287.0   11034.0  0.003095  25.3\n",
+      "7   District of Columbia    705749.0    1392.0  0.001972  22.1\n",
+      "8               Delaware    973764.0    3440.0  0.003533  29.7\n",
+      "9                Florida  21477737.0   89075.0  0.004147  26.8\n",
+      "10               Georgia  10617423.0   42351.0  0.003989  30.7\n",
+      "11                Hawaii   1415872.0    1955.0  0.001381  22.7\n",
+      "12                  Iowa   3155070.0   10538.0  0.003340  32.1\n",
+      "13                 Idaho   1787065.0    5513.0  0.003085  28.6\n",
+      "14              Illinois  12671821.0   39381.0  0.003108  30.8\n",
+      "15               Indiana   6732219.0   25959.0  0.003856  31.3\n",
+      "16                Kansas   2913314.0   10229.0  0.003511  34.2\n",
+      "17              Kentucky   4467673.0   18094.0  0.004050  34.6\n",
+      "18             Louisiana   4648794.0   18136.0  0.003901  36.2\n",
+      "19         Massachusetts   6892503.0   21035.0  0.003052  24.3\n",
+      "20              Maryland   6045680.0   15578.0  0.002577  28.9\n",
+      "21                 Maine   1344212.0    3085.0  0.002295  30.0\n",
+      "22              Michigan   9986857.0   43191.0  0.004325  31.2\n",
+      "23             Minnesota   5639632.0   12806.0  0.002271  26.1\n",
+      "24              Missouri   6137428.0   20776.0  0.003385  32.4\n",
+      "25           Mississippi   2976149.0   13474.0  0.004527  35.6\n",
+      "26               Montana   1068778.0    3712.0  0.003473  23.6\n",
+      "27        North Carolina  10488084.0   29059.0  0.002771  30.1\n",
+      "28          North Dakota    762062.0    2232.0  0.002929  31.0\n",
+      "29              Nebraska   1934408.0    4827.0  0.002495  31.4\n",
+      "30         New Hampshire   1359711.0    2972.0  0.002186  26.3\n",
+      "31            New Jersey   8882190.0   35774.0  0.004028  25.6\n",
+      "32            New Mexico   2096829.0    9236.0  0.004405  28.8\n",
+      "33                Nevada   3080156.0   12084.0  0.003923  26.7\n",
+      "34              New York  19453561.0   77423.0  0.003980  25.0\n",
+      "35                  Ohio  11689100.0   42299.0  0.003619  29.8\n",
+      "36              Oklahoma   3956971.0   16157.0  0.004083  33.9\n",
+      "37                Oregon   4217737.0    8726.0  0.002069  30.1\n",
+      "38          Pennsylvania  12801989.0   51344.0  0.004011  30.0\n",
+      "39          Rhode Island   1059361.0    4148.0  0.003916  26.0\n",
+      "40        South Carolina   5148714.0   17869.0  0.003471  31.7\n",
+      "41          South Dakota    884659.0    3245.0  0.003668  30.4\n",
+      "42             Tennessee   6829174.0   28113.0  0.004117  33.8\n",
+      "43                 Texas  28995881.0   92378.0  0.003186  32.4\n",
+      "44                  Utah   3205958.0    5397.0  0.001683  24.5\n",
+      "45              Virginia   8535519.0   23769.0  0.002785  29.2\n",
+      "46               Vermont    623989.0     910.0  0.001458  25.1\n",
+      "47            Washington   7614893.0   15972.0  0.002097  26.4\n",
+      "48             Wisconsin   5822434.0   16723.0  0.002872  30.7\n",
+      "49         West Virginia   1792147.0    8163.0  0.004555  35.6\n",
+      "50               Wyoming    578759.0    2039.0  0.003523  29.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_db_connection():\n",
+    "    conn = psycopg2.connect(host='localhost',\n",
+    "                            database='Project_3',\n",
+    "                            user='postgres',\n",
+    "                            password='postgres')\n",
+    "    return conn\n",
+    "\n",
+    "#################################################\n",
+    "# Flask Routes\n",
+    "#################################################\n",
+    "\n",
+    "\n",
+    "conn = get_db_connection()\n",
+    "cur = conn.cursor()\n",
+    "cur.execute('SELECT * FROM \"Final_Obesity_Covid_data\";')\n",
+    "data0 = cur.fetchall()\n",
+    "cur.execute('SELECT * FROM \"Income_data_and_obesity_data\";')\n",
+    "data1 = cur.fetchall()\n",
+    "cur.execute('SELECT * FROM \"PovertyByState_clean1_data\";')\n",
+    "data2 = cur.fetchall()\n",
+    "cur.execute('SELECT * FROM \"TotalAccessbydistance_obesity_clean1_data\";')\n",
+    "data3 = cur.fetchall()\n",
+    "data0=pd.DataFrame.from_dict(data0)\n",
+    "cur.close()\n",
+    "conn.close()\n",
+    "print(data0)\n",
+    "#convert downloading tables into dataframes\n",
+    "data0=pd.DataFrame.from_dict(data0)\n",
+    "\n",
+    "data1=pd.DataFrame.from_dict(data1)\n",
+    "data2=pd.DataFrame.from_dict(data2)\n",
+    "data3=pd.DataFrame.from_dict(data3)\n",
+    "data_all=data0\n",
+    "##merge all dataframes together for ease of access\n",
+    "#\n",
+    "data_all=data_all.merge(data1, how=\"right\",on=0)\n",
+    "\n",
+    "data_all=data_all.merge(data2, how=\"right\",on=0)\n",
+    "data_all=data_all.merge(data3, how=\"right\",on=0)\n",
+    "data_all.head()"
+   ]
   }
  ],
  "metadata": {
